# inpe_sync

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
app/: config.py  deps.py  logging_config.py  main.py  models.py  scheduler.py
app/api/v1/routers/: __init__.py  data.py  debug_data.py  health.py  ingest.py
app/core/: db.py  deps.py  scheduler.py
app/models/: schemas.py
app/repositories/: fires_repo.py  mongo_repo.py
app/routers/: data.py  debug.py  debug_data.py  health.py  ingest.py  schema.py
app/services/: inpe_client.py  mock_services.py  protocols.py  wfs_service.py
app/utils/: time_windows.py
