[project]
name = "inpe-sync"
version = "0.1.0"
description = "FastAPI service that syncs BDQueimadas (48h) hotspots from INPE/TerraBrasilis WFS into MongoDB Atlas with idempotent upserts, geo indexing, structured logging, exponential retries and circuit breaker."
authors = [
    {name = "Cahú Victor",email = "33499532+CahuVictor@users.noreply.github.com"}
]
readme = "README.md"
requires-python = "3.11.9"
dependencies = [
    "fastapi (>=0.118.0,<0.119.0)",
    "uvicorn[standard] (>=0.37.0,<0.38.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pydantic (>=2.11.9,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "motor (>=3.7.1,<4.0.0)",
    "apscheduler (>=3.11.0,<4.0.0)",
    "structlog (>=25.4.0,<26.0.0)",
    "tenacity (>=9.1.2,<10.0.0)",
    "pybreaker (>=1.4.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
